--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							I specialize in creating cutting-edge ML models and Gen-AI applications, from fine-tuning large language models to developing adaptive ML models for real-world challenges. Whether it’s uncovering patterns in data or enhancing user experiences through intelligent automation, I focus on blending creativity and precision.
 						</p>
 						<li>
-							<a href="/assets/SaurabhGhadgeResume1122.pdf" class="button" target="_blank">Learn More</a>
+							<a href="https://github.com/nameissaurabh/PortFolio/blob/main/assets/SaurabhGhadgeResume1122.pdf" class="button" target="_blank">Learn More</a>
 						</li>
 					</section>
 
