--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ <!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -47,7 +47,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image fit thumb"  target="_blank">
+								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link"  target="_blank">
 									<img src="images/thumbs/01.jpg" alt="GitHub repository for Large Language Model From Scratch" />
 								</a>
 								<h3>Large Language Model From Scratch</h3>
@@ -56,7 +56,7 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://huggingface.co/spaces/saurabh002/Orion" class="image fit thumb"  target="_blank">
+								<a href="https://huggingface.co/spaces/saurabh002/Orion" class="image-link"  target="_blank">
 									<img src="images/thumbs/02.jpg" alt="Hugging-Face hosting space" /></a>
 								<h3>Orion: Real-Time Adverse Media Screening Application</h3>
 								<p>
