--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							</article>
-						</div>
+<!-- 							</article> -->
+<!-- 						</div> -->
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
