--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link"  target="_blank">
+								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link">
 									<img src="images/thumbs/01.jpg" alt="GitHub repository for Large Language Model From Scratch" />
 								</a>
 								<h3>Large Language Model From Scratch</h3>
@@ -56,13 +56,14 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://huggingface.co/spaces/saurabh002/Orion" class="image-link"  target="_blank">
+								<a href="https://huggingface.co/spaces/saurabh002/Orion" class="image-link">
 									<img src="images/thumbs/02.jpg" alt="Hugging-Face hosting space" /></a>
 								<h3>Orion: Real-Time Adverse Media Screening Application</h3>
 								<p>
 									Explore Gen-AI application developed by me for real-time adverse media screening and compliance checks.
 								</p>
 							</article>
+						</section>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
@@ -87,7 +88,7 @@
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
-					</section>
+					
 
 				<!-- Three -->
 				<section id="three">
