--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -38,7 +38,7 @@
 							I specialize in creating cutting-edge ML models and Gen-AI applications, from fine-tuning large language models to developing adaptive ML models for real-world challenges. Whether it’s uncovering patterns in data or enhancing user experiences through intelligent automation, I focus on blending creativity and precision.
 						</p>
 						<li>
-							<a href="assets/SaurabhGhadgeResume1122.pdf" class="button" target="_blank">Learn More</a>
+							<a href="\assets\SaurabhGhadgeResume1122.pdf" class="button" target="_blank">Learn More</a>
 						</li>
 					</section>
 
@@ -63,7 +63,6 @@
 									Explore Gen-AI application developed by me for real-time adverse media screening and compliance checks.
 								</p>
 							</article>
-						</section>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
@@ -83,12 +82,12 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-<!-- 							</article> -->
-<!-- 						</div> -->
+							<!-- </article>
+						</div> -->
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul> -->
-					
+					</section>
 
 				<!-- Three -->
 				<section id="three">
