--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<li>
 								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link">
 									<img src="images/thumbs/01.jpg" alt="GitHub repository for Large Language Model From Scratch" />
-								</a></li>
+								</a>
 								<h3>Large Language Model From Scratch</h3>
 								<p>
 									Explore my implementation of large language models from scratch with Sebastian Raschka, showcasing foundational concepts and practical coding skills.
@@ -64,12 +63,13 @@
 									Explore Gen-AI application developed by me for real-time adverse media screening and compliance checks.
 								</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
+							<<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amenisl sed nullam feugiat.</p>
+								<h3>Spotlight Awards</h3>
+								<p>In recognition of outstanding contributions to the organization for two
+									consecutive years (2022-2024).</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!--article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
