--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
 								</p>
 							</article>
 							<<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Spotlight Awards</h3>
-								<p>In recognition of outstanding contributions to the organization for two
-									consecutive years (2022-2024).</p>
-							</article>
-							<!--article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="assets/jan_2023_spotlight.png" class="image fit thumb"><img src="assets/jan_2023_spotlight.png" alt="" /></a>
+								<h3>2023 Spotlight Award</h3>
+								<p>In recognition of outstanding contributions to the organization for year 2023.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="assets/apr_2024_spotlight.png" class="image fit thumb"><img src="assets/apr_2024_spotlight.png" alt="" /></a>
+								<h3>2023 Spotlight Award</h3>
+								<p>In recognition of outstanding contributions to the organization for year 2024.</p>
+							</article>
+							<!--article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
