--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link">
-									<img src="images/thumbs/01.jpg" alt="GitHub repository for Large Language Model From Scratch" />
+									<img src="images/fulls/LLM.jpeg" alt="GitHub repository for Large Language Model From Scratch" />
 								</a>
 								<h3>Large Language Model From Scratch</h3>
 								<p>
@@ -57,7 +57,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://huggingface.co/spaces/saurabh002/Orion" class="image-link">
-									<img src="images/thumbs/02.jpg" alt="Hugging-Face hosting space" /></a>
+									<img src="images/fulls/LLMapparchitecturediagram.jpg" alt="Hugging-Face hosting space" /></a>
 								<h3>Orion: Real-Time Adverse Media Screening Application</h3>
 								<p>
 									Explore Gen-AI application developed by me for real-time adverse media screening and compliance checks.
