--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									Explore Gen-AI application developed by me for real-time adverse media screening and compliance checks.
 								</p>
 							</article>
-							<<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="assets/jan_2023_spotlight.png" class="image fit thumb"><img src="assets/jan_2023_spotlight.png" alt="" /></a>
 								<h3>2023 Spotlight Award</h3>
 								<p>In recognition of outstanding contributions to the organization for year 2023.</p>
