--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							I specialize in creating cutting-edge ML models and Gen-AI applications, from fine-tuning large language models to developing adaptive ML models for real-world challenges. Whether it’s uncovering patterns in data or enhancing user experiences through intelligent automation, I focus on blending creativity and precision.
 						</p>
 						<li>
-							<a href="\assets\SaurabhGhadgeResume1122.pdf" class="button" target="_blank">Resume Here</a>
+							<a href="assets/SaurabhGhadgeResume2411.pdf" class="button" target="_blank">Resume Here</a>
 						</li>
 					</section>
 
@@ -460,7 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="mailto:saurabhghadge84@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="www.linkedin.com/in/nameis-saurabh" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/nameis-saurabh/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/nameissaurabh" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.kaggle.com/ghadgesaurabh" class="icon brands fa-kaggle"><span class="label">Dribbble</span></a></li>
 					</ul>
