--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="assets/jan_2023_spotlight.png" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="assets/jan_2023_spotlight.png" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="View Award" /></a>
 								<h3>2023 Spotlight Award</h3>
 								<p>In recognition of outstanding contributions to the organization for year 2023.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="assets/apr_2024_spotlight.png" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="assets/apr_2024_spotlight.png" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="View Award" /></a>
 								<h3>2024 Spotlight Award</h3>
 								<p>In recognition of outstanding contributions to the organization for year 2024.</p>
 							</article>
