--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Recent Work</h2>
+						<h4>Click respective image for more details</h4>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/nameissaurabh/LLMs-from-scratch" class="image-link">
